# api-product/routes/api.php
@@ -1,6 +1,5 @@
 <?php
 
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\ProductController;
 
@@ -15,11 +14,31 @@ use App\Http\Controllers\ProductController;
 |
 */
 
+// Route::post('/products', [ProductController::class, 'store']);
+// Route::get('/products', [ProductController::class, 'index']);
+// Route::get('/products/{id}', [ProductController::class, 'show']);
+// Route::put('/products/{id}',  [ProductController::class, 'update']);
+// Route::delete('/products/{id}',  [ProductController::class, 'destroy']);
 
-Route::controller(ProductController::class)->group(function () {
-    Route::post('/products', 'store');
-    Route::get('/products', 'index');
-    Route::get('/products/{id}', 'show');
-    Route::put('/products/{id}',  'update');
-    Route::delete('/products/{id}',  'destroy');
+
+// public endpoints
+Route::get('/hello', function () {
+    return ':)';
+});
+
+// // protected endpoints
+// Route::group(['middleware' => 'auth:api'], function () {
+//     Route::get('/protected-endpoint', 'SecretController@index');
+//     // more endpoints ...
+// });
+
+// protected endpoints
+Route::group(['middleware' => 'auth:api'], function () {
+    Route::controller(ProductController::class)->group(function () {
+        Route::post('/products', 'store');
+        Route::get('/products', 'index');
+        Route::get('/products/{id}', 'show');
+        Route::put('/products/{id}',  'update');
+        Route::delete('/products/{id}',  'destroy');
+    });
 });
